fix: fix bug with slider overflow pictures four

--- a/src/scss/pages/__quiz.scss
+++ b/src/scss/pages/__quiz.scss
@@ -54,18 +54,23 @@
   }
 }
 
+.quiz-slider {
+  overflow: hidden;
+}
+
 .quiz__images {
   display: flex;
   flex-wrap: wrap;
-  overflow: hidden;
+  transition: 1s ease;
+  height: 100%;
 
-  &.pictures {
-    height: 100%;
-  }
+  // &.pictures {
+  //   height: 100%;
+  // }
 
-  &.artists {
-    height: 60%;
-  }
+  // &.artists {
+  //   height: 60%;
+  // }
 
   .image {
     position: relative;
@@ -96,13 +101,12 @@
       width: 100%;
       height: 25%;
       cursor: pointer;
+      padding: var(--quiz-pictures-img-p);
 
       @media (min-width: 768px) {
         width: 50%;
         height: 50%;
       }
-
-      padding: var(--quiz-pictures-img-p);
 
       img {
         width: 100%;
@@ -117,7 +121,8 @@
       object-fit: cover;
       border-radius: 20px;
       transition: 0.3s;
-      z-index: 1;
+      box-sizing: border-box;
+      // z-index: 1;
       // cursor: pointer;
 
       &.disabled {
@@ -126,7 +131,6 @@
       }
 
       &.correct {
-        z-index: 3;
         border: 10px solid var(--green);
         animation: zoom-in-zoom-out 1s ease;
       }
